fix(accordion): reverted gap and accordion-item changes

--- a/web-components/src/components/accordion/scss/accordion-item.scss
+++ b/web-components/src/components/accordion/scss/accordion-item.scss
@@ -15,10 +15,9 @@
     &-expander {
       @include button-reset;
       @include flex($jc: flex-start, $ai: stretch);
+      border-radius: $accordion-btn-border-radius;
       flex: 0 1 100%;
       padding: $accordion-base-indent;
-      border-radius: var(--accordion-item-header-border-radius);
-      background: var(--accordion-item-header-bg);
       md-icon {
         @include arrow-transition;
         display: flex;
@@ -52,7 +51,7 @@
 :host(md-accordion-item[focus-visible]) {
   .md-accordion-expander {
     box-shadow: 0 0 0 core.rem-calc(2) $accordion-border_focus;
-    color: var(--accordion-item-header-color-active);
+    color: $accordion-active;
   }
 }
 
@@ -60,7 +59,7 @@
   .md-accordion-item:hover {
     .md-accordion-header {
       background: $accordion_hover;
-      border-radius: var(--accordion-item-header-border-radius);
+      border-radius: $accordion-btn-border-radius;
     }
   }
 }
