--- a/web-components/src/components/accordion/scss/accordion.scss
+++ b/web-components/src/components/accordion/scss/accordion.scss
@@ -10,10 +10,7 @@
 
   .md-accordion {
     width: 100%;
-    border-radius: var(--accordion-border-radius);
-    display: flex;
-    flex-direction: column;
-    gap: var(--custom-accordion-gap, var(--accordion-gap));
+    border-radius: $accordion-border-radius;
   }
 }
 
